# Anchor

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  labels.json  maintainers.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  project-task.yml  prompt-improvement.yml
.github/workflows/: ci.yml  claim-followup.yml  docs.yml  issue-intake.yml  label-sync.yml  pr-hygiene.yml  pr-routing.yml  stale.yml  triage-commands.yml  welcome.yml
docs/: maintainers.md  roadmap.md  vision.md
examples/: chat.py  custom_anchor.py
src/anchor/: __init__.py  anchor.py  anchorfn.py  config.py  decomposer.py  ingestor.py  loop.py  memory.py  retriever.py  runresult.py  synthesizer.py
tests/: conftest.py  eval_harness.py  harness.py  unit_harness.py
tests/evals/: __init__.py  conftest.py  test_eval_harness.py  test_harness.py
tests/unit/: __init__.py  test_anchor_config.py  test_decomposer_normalize.py  test_decomposer_prompts.py  test_ingestor.py  test_loop.py  test_loop_helpers.py  test_loop_max_remembers.py  test_retriever.py  test_unit_harness.py
